--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
 
     nav {
       background: black;
-      padding: 10px 20px; /* reduced vertical padding */
+      padding: 10px 20px 5px 20px; /* reduced bottom padding */
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 8px;
       z-index: 2;
       position: relative;
+      margin-bottom: 0; /* remove margin */
     }
 
     .nav-links {
@@ -115,9 +116,9 @@
     .background-container {
       display: flex;
       width: 100%;
-      height: 100vh;
+      height: calc(100vh - 130px); /* adjust height for smaller nav + header */
       transition: opacity 1s ease-in-out;
-      margin-top: 70px;
+      margin-top: 0; /* remove margin to reduce black space */
     }
 
     .bg-image {
@@ -219,7 +220,7 @@
 
     @media (max-width: 768px) {
       nav {
-        padding: 10px 10px;
+        padding: 10px 10px 5px 10px;
       }
       .nav-links {
         flex-wrap: wrap;
