--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
     nav {
       background: black;
-      padding: 10px 20px 5px 20px; /* reduced bottom padding */
+      padding: 10px 20px 2px 20px; /* tighter bottom padding */
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 8px;
+      gap: 4px; /* less gap */
       z-index: 2;
       position: relative;
-      margin-bottom: 0; /* remove margin */
+      margin-bottom: 0;
     }
 
     .nav-links {
@@ -116,9 +116,9 @@
     .background-container {
       display: flex;
       width: 100%;
-      height: calc(100vh - 130px); /* adjust height for smaller nav + header */
+      height: calc(100vh - 120px); /* smaller height for tighter spacing */
       transition: opacity 1s ease-in-out;
-      margin-top: 0; /* remove margin to reduce black space */
+      margin-top: 0;
     }
 
     .bg-image {
@@ -220,7 +220,7 @@
 
     @media (max-width: 768px) {
       nav {
-        padding: 10px 10px 5px 10px;
+        padding: 10px 10px 2px 10px;
       }
       .nav-links {
         flex-wrap: wrap;
