--- a/product.html
+++ b/product.html
@@ -32,12 +32,12 @@
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
+      gap: 20px;
     }
 
     nav a {
       color: white;
       text-decoration: none;
-      margin: 0 20px;
       font-size: 18px;
       font-weight: bold;
     }
@@ -151,15 +151,12 @@
   </header>
 
   <nav>
-    <div style="display: flex; justify-content: center; align-items: center; flex: 1; gap: 20px; flex-wrap: wrap;">
-      <a href="index.html">Home</a>
-      <a href="product.html">Product</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="feedback.html">Feedback</a>
-      <a href="cart.html">🛒 Cart: <span id="cart-count">0</span></a>    
-</div>
-    
+    <a href="index.html">Home</a>
+    <a href="product.html">Product</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="feedback.html">Feedback</a>
+    <a href="cart.html">🛒 Cart: <span id="cart-count">0</span></a>    
   </nav>
 
   <main>
@@ -195,85 +192,51 @@
   </footer>
 
   <script>
-
-document.addEventListener("click", function(e) {
-  if (e.target.classList.contains("add-to-cart")) {
-    const productCard = e.target.closest(".product");
-    const img = productCard.querySelector("img").src;
-    const name = productCard.querySelector("p").innerText;
-    const price = (Math.random() * 20 + 5).toFixed(2); // You can assign real prices if available
-
-    const cartItem = { img, name, price, quantity: 1 };
-
-    let cart = JSON.parse(localStorage.getItem("cart")) || [];
-
-    const existingItem = cart.find(item => item.name === name);
-    if (existingItem) {
-      existingItem.quantity++;
-    } else {
-      cart.push(cartItem);
-    }
-
-    localStorage.setItem("cart", JSON.stringify(cart));
-
-    // Update cart count
-    const totalCount = cart.reduce((sum, item) => sum + item.quantity, 0);
-    document.getElementById("cart-count").innerText = totalCount;
-  }
-});
-
-// On page load, update cart count
-window.addEventListener("DOMContentLoaded", () => {
-  const cart = JSON.parse(localStorage.getItem("cart")) || [];
-  const totalCount = cart.reduce((sum, item) => sum + item.quantity, 0);
-  document.getElementById("cart-count").innerText = totalCount;
-});
-
     const products = {
       tobacco: [
-        { img: "seven stars cig.JPG", name: "SEVEN STARS CIGARETTES" },
-        { img: "red apple cig.JPG", name: "RED APPLE CIGARETTES" },
-        { img: "nike cig.jpeg", name: "CUSTOM NIKE CIGARETTES" },
-        { img: "lucky strike cig.JPG", name: "LUCKY STRIKE CIGARETTES" },
-        { img: "hupman.jpg", name: "HUPMAN CIGARETTES" },
-        { img: "waltz.jpeg", name: "WALTZ CIGARETTES" },
-        { img: "marlboro.JPG", name: "VINTAGE MARLBORO CIGARETTES" },
-        { img: "brown bear herbs.jpg", name: "BROWN BEAR CIGARETTES" },
-        { img: "newport mentol.jpeg", name: "NEWPORT CIGARETTES" }
+        { img: "seven stars cig.JPG", name: "SEVEN STARS CIGARETTES", price: 8.99 },
+        { img: "red apple cig.JPG", name: "RED APPLE CIGARETTES", price: 7.50 },
+        { img: "nike cig.jpeg", name: "CUSTOM NIKE CIGARETTES", price: 9.25 },
+        { img: "lucky strike cig.JPG", name: "LUCKY STRIKE CIGARETTES", price: 7.99 },
+        { img: "hupman.jpg", name: "HUPMAN CIGARETTES", price: 8.50 },
+        { img: "waltz.jpeg", name: "WALTZ CIGARETTES", price: 6.75 },
+        { img: "marlboro.JPG", name: "VINTAGE MARLBORO CIGARETTES", price: 9.99 },
+        { img: "brown bear herbs.jpg", name: "BROWN BEAR CIGARETTES", price: 7.25 },
+        { img: "newport mentol.jpeg", name: "NEWPORT CIGARETTES", price: 8.80 }
       ],
       nicotinePouches: [
-        { img: "zyn chill.WEBP", name: "ZYN CHILLS" },
-        { img: "zyn citrus.WEBP", name: "ZYN CITRUS" },
-        { img: "zyn wintergreen.WEBP", name: "ZYN WINTERGREEN" }
+        { img: "zyn chill.WEBP", name: "ZYN CHILLS", price: 5.99 },
+        { img: "zyn citrus.WEBP", name: "ZYN CITRUS", price: 5.99 },
+        { img: "zyn wintergreen.WEBP", name: "ZYN WINTERGREEN", price: 5.99 }
       ],
       lighters: [
-        { img: "taylor swift lighter.JPG", name: "TAYLOR SWIFT CUSTOM LIGHTER" },
-        { img: "the shining lighter.JPG", name: "THE SHINING LIGHTER" },
-        { img: "rip bt lighter.JPG", name: "RIP BETTER DAYS LIGHTER" },
-        { img: "fuck it lighter.JPG", name: "F*CK IT LIGHTER" },
-        { img: "escape lighter.JPG", name: "ESCAPE LIGHTER" },
-        { img: "BAD lighter.JPG", name: "CUSTOM BAD LIGHTER" },
-        { img: "wavey lighter.JPG", name: "CUSTOM WAVEY LIGHTER" },
-        { img: "edward lighter.JPG", name: "EDWARD SCISSOR HANDS LIGHTER" },
-        { img: "80s lighter.JPG", name: "CUSTOM 80S LIGHTER" }
+        { img: "taylor swift lighter.JPG", name: "TAYLOR SWIFT CUSTOM LIGHTER", price: 12.00 },
+        { img: "the shining lighter.JPG", name: "THE SHINING LIGHTER", price: 11.50 },
+        { img: "rip bt lighter.JPG", name: "RIP BETTER DAYS LIGHTER", price: 10.75 },
+        { img: "fuck it lighter.JPG", name: "F*CK IT LIGHTER", price: 9.99 },
+        { img: "escape lighter.JPG", name: "ESCAPE LIGHTER", price: 10.50 },
+        { img: "BAD lighter.JPG", name: "CUSTOM BAD LIGHTER", price: 13.20 },
+        { img: "wavey lighter.JPG", name: "CUSTOM WAVEY LIGHTER", price: 13.00 },
+        { img: "edward lighter.JPG", name: "EDWARD SCISSOR HANDS LIGHTER", price: 14.00 },
+        { img: "80s lighter.JPG", name: "CUSTOM 80S LIGHTER", price: 12.75 }
       ],
       vapes: [
-        { img: "vozol CB juice.JPG", name: "VOZOL CARIBBEAN JUICE 20K" },
-        { img: "vozol bluecherry.WEBP", name: "VOZOL BLUECHERRY 20K" },
-        { img: "vozol strawberry.WEBP", name: "VOZOL STRAWBERRY 20K" },
-        { img: "baang lichee.JPG", name: "BAANG LICHEE 2.4K" },
-        { img: "baang mixed fruit.JPG", name: "BAANG MIXED FRUIT 2.4K" },
-        { img: "baang peach ice.JPG", name: "BAANG PEACH ICE 2.4K" },
-        { img: "ivg 2400 maroon.webp", name: "IVG 2400 KIWI" },
-        { img: "ivg 2400 strawberry.JPG", name: "IVG 2400 STRAWBERRY" },
-        { img: "ivg 2400 tropical.JPG", name: "IVG 2400 TROPICAL" }
+        { img: "vozol CB juice.JPG", name: "VOZOL CARIBBEAN JUICE 20K", price: 15.99 },
+        { img: "vozol bluecherry.WEBP", name: "VOZOL BLUECHERRY 20K", price: 15.99 },
+        { img: "vozol strawberry.WEBP", name: "VOZOL STRAWBERRY 20K", price: 15.99 },
+        { img: "baang lichee.JPG", name: "BAANG LICHEE 2.4K", price: 14.50 },
+        { img: "baang mixed fruit.JPG", name: "BAANG MIXED FRUIT 2.4K", price: 14.50 },
+        { img: "baang peach ice.JPG", name: "BAANG PEACH ICE 2.4K", price: 14.50 },
+        { img: "ivg 2400 maroon.webp", name: "IVG 2400 KIWI", price: 16.00 },
+        { img: "ivg 2400 strawberry.JPG", name: "IVG 2400 STRAWBERRY", price: 16.00 },
+        { img: "ivg 2400 tropical.JPG", name: "IVG 2400 TROPICAL", price: 16.00 }
       ],
       otherItems: [
-        { img: "burn baby burn ash tray.JPG", name: "BBB ASH TRAY" },
-        { img: "marlboro ash tray.jpeg", name: "CUSTOM MARLBORO ASH TRAY" },
-        { img: "marlboro drawer.jpeg", name: "CUSTOM MARLBORO DRAWER" },
-        { img: "only for hot person ash tray.JPG", name: "OFHP ASH TRAY" },
-        { img: "puff puff pass ash tray.JPG", name: "PPP ASH TRAY" }
+        { img: "burn baby burn ash tray.JPG", name: "BBB ASH TRAY", price: 7.00 },
+        { img: "marlboro ash tray.jpeg", name: "CUSTOM MARLBORO ASH TRAY", price: 8.00 },
+        { img: "marlboro drawer.jpeg", name: "CUSTOM MARLBORO DRAWER", price: 9.50 },
+        { img: "only for hot person ash tray.JPG", name: "OFHP ASH TRAY", price: 7.50 },
+        { img: "puff puff pass ash tray.JPG", name: "PPP ASH TRAY", price: 7.25 }
       ]
     };
 
@@ -285,32 +248,67 @@ window.addEventListener("DOMContentLoaded", () => {
       otherItems: document.getElementById("other-items-grid")
     };
 
-    let cartCount = 0;
+    // Generate product cards for each category
+    for (const category in products) {
+      products[category].forEach(product => {
+        const card = document.createElement("div");
+        card.classList.add("product");
 
-    function createProductSection(category, productsArray) {
-      const grid = gridSections[category];
-      productsArray.forEach(product => {
-        const div = document.createElement("div");
-        div.className = "product";
-        div.innerHTML = `
-          <img src="${product.img}" alt="${product.name}">
+        card.innerHTML = `
+          <img src="${product.img}" alt="${product.name}" />
           <div class="product-info">
             <p>${product.name}</p>
+            <p>Price: $${product.price.toFixed(2)}</p>
             <button class="add-to-cart">Add to Cart</button>
           </div>
         `;
-        grid.appendChild(div);
+
+        gridSections[category].appendChild(card);
       });
     }
 
-    Object.keys(products).forEach(category => {
-      createProductSection(category, products[category]);
-    });
+    // Update cart count from localStorage on page load
+    function updateCartCount() {
+      const cart = JSON.parse(localStorage.getItem("cart")) || [];
+      const totalCount = cart.reduce((sum, item) => sum + item.quantity, 0);
+      document.getElementById("cart-count").innerText = totalCount;
+    }
 
-    document.addEventListener("click", function(e) {
+    updateCartCount();
+
+    // Add to cart click handler
+    document.addEventListener("click", function (e) {
       if (e.target.classList.contains("add-to-cart")) {
-        cartCount++;
-        document.getElementById("cart-count").innerText = cartCount;
+        const productCard = e.target.closest(".product");
+        const name = productCard.querySelector("p").innerText;
+
+        // Find product by name in products
+        let foundProduct = null;
+        for (const category in products) {
+          foundProduct = products[category].find(p => p.name === name);
+          if (foundProduct) break;
+        }
+
+        if (!foundProduct) return;
+
+        const cartItem = {
+          img: foundProduct.img,
+          name: foundProduct.name,
+          price: foundProduct.price,
+          quantity: 1
+        };
+
+        let cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+        const existingItem = cart.find(item => item.name === name);
+        if (existingItem) {
+          existingItem.quantity++;
+        } else {
+          cart.push(cartItem);
+        }
+
+        localStorage.setItem("cart", JSON.stringify(cart));
+        updateCartCount();
       }
     });
   </script>
