--- a/about.html
+++ b/about.html
@@ -21,22 +21,6 @@
       overflow-x: hidden;
     }
 
-    body > header,
-    body > nav,
-    body > footer {
-      flex-shrink: 0;
-    }
-
-    .main-content {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      width: 100%;
-      position: relative;
-    }
-
     .bg-fade {
       position: fixed;
       top: 0;
@@ -69,14 +53,12 @@
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      width: 100%;
     }
 
     .nav-links {
       display: flex;
       justify-content: center;
       align-items: center;
-      flex: 1;
       gap: 20px;
       flex-wrap: wrap;
     }
@@ -93,38 +75,51 @@
       color: #f8c471;
     }
 
-    .nav-right {
-      color: white;
-      font-weight: bold;
-      margin-left: auto;
-      padding-right: 20px;
+    .main-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 50px 20px;
+      gap: 60px;
     }
 
     .section {
-      position: absolute;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
       width: 100%;
       max-width: 900px;
       background: rgba(0, 0, 0, 0.6);
       padding: 40px;
       border-radius: 10px;
-      box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
-      transition: opacity 0.8s ease, transform 0.8s ease;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
       opacity: 0;
+      transform: translateY(30px);
+      transition: all 0.6s ease;
       pointer-events: none;
     }
 
     .section.active {
       opacity: 1;
+      transform: translateY(0);
       pointer-events: auto;
-      position: relative;
-      transform: translateX(-50%) translateY(0);
     }
 
-    .section h2 {
-      margin: 30px 0 10px;
+    .section > * {
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeUp 0.6s forwards ease-out;
+    }
+
+    .section.active > *:nth-child(1) { animation-delay: 0.1s; }
+    .section.active > *:nth-child(2) { animation-delay: 0.3s; }
+    .section.active > *:nth-child(3) { animation-delay: 0.5s; }
+    .section.active > *:nth-child(4) { animation-delay: 0.7s; }
+    .section.active > *:nth-child(5) { animation-delay: 0.9s; }
+    .section.active > *:nth-child(6) { animation-delay: 1.1s; }
+
+    @keyframes fadeUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     footer {
@@ -133,49 +128,10 @@
       font-size: 14px;
       text-align: center;
       width: 100%;
-      flex-shrink: 0;
-      position: relative;
-      z-index: 1;
     }
 
-    /* Staggered fade-up animation */
-    @keyframes fadeUp {
-      0% {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .section.active > * {
-      opacity: 0;
-      transform: translateY(20px);
-      animation-fill-mode: forwards;
-      animation-name: fadeUp;
-      animation-duration: 0.6s;
-      animation-timing-function: ease-out;
-    }
-
-    .section.active > *:nth-child(1) {
-      animation-delay: 0.1s;
-    }
-    .section.active > *:nth-child(2) {
-      animation-delay: 0.3s;
-    }
-    .section.active > *:nth-child(3) {
-      animation-delay: 0.5s;
-    }
-    .section.active > *:nth-child(4) {
-      animation-delay: 0.7s;
-    }
-    .section.active > *:nth-child(5) {
-      animation-delay: 0.9s;
-    }
-    .section.active > *:nth-child(6) {
-      animation-delay: 1.1s;
+    ul {
+      margin-top: 10px;
     }
   </style>
 </head>
@@ -198,8 +154,8 @@
     </div>
   </nav>
 
-  <div class="main-content" style="height: 100vh;"> <!-- Scrollable height -->
-    <section class="section active" id="heroSection">
+  <div class="main-content">
+    <section class="section" id="heroSection">
       <h2>Premium Quality, Timeless Tradition</h2>
       <p>
         At <strong>GrimmDraw</strong>, we redefine indulgence with a curated selection of premium nicotine experiences.
@@ -217,17 +173,53 @@
     <section class="section" id="ourStory">
       <h2>Our Story</h2>
       <p>
-        GrimmDraw was born out of a desire to challenge the norms of traditional smoking culture. What began as a niche
-        collection of boutique cigarette blends quickly evolved into a bold, full-spectrum lifestyle brand. Today, we
-        serve connoisseurs across the globe with products that honor both history and progress.
+        GrimmDraw was born from the underground scene—a fusion of art, rebellion, and the raw beauty of nostalgia. 
+        Our founders were passionate creators who saw tobacco and nicotine not just as products, but as cultural statements.
+        From sketching on matchbooks to hand-packing vintage-styled cigarettes, GrimmDraw emerged as a tribute to bold self-expression.
       </p>
+      <p>
+        What started as a niche local brand soon captured the imagination of those craving something more than mass-produced monotony.
+        Today, GrimmDraw thrives as a lifestyle rooted in rebellion, art, and premium craftsmanship.
+      </p>
+    </section>
 
+    <section class="section" id="whatWeOffer">
+      <h2>What We Offer</h2>
+      <p>
+        At GrimmDraw, we curate a wide spectrum of alternative nicotine products:
+      </p>
+      <ul style="padding-left: 20px; list-style-type: square;">
+        <li><strong>Custom Cigarettes</strong> – Handpicked blends and rare aesthetics that evoke a retro soul.</li>
+        <li><strong>Nicotine Pouches</strong> – Discreet, flavorful, and smokeless options for modern users.</li>
+        <li><strong>Designer Lighters</strong> – Each piece is a collectible, designed to match your vibe.</li>
+        <li><strong>Premium Vapes</strong> – Sleek, smooth-hitting devices with bold flavors and powerful performance.</li>
+        <li><strong>Exclusive Accessories</strong> – Ash trays, drawers, and decor items that elevate your ritual.</li>
+      </ul>
+    </section>
+
+    <section class="section" id="health">
+      <h2>Health & Harm Reduction</h2>
+      <p>
+        We recognize the health risks associated with nicotine and tobacco use. GrimmDraw does not market to minors and
+        supports responsible, informed usage by consenting adults. Our goal is not to glamorize addiction, but to offer
+        a mindful, aesthetic-forward experience for those who choose to indulge.
+      </p>
+      <p>
+        Many of our customers are switching from traditional combustible cigarettes to less harmful alternatives like
+        nicotine pouches or controlled vaping. While no nicotine product is risk-free, some methods of delivery
+        may pose fewer long-term health risks than others. We advocate for transparency, education, and freedom of choice.
+      </p>
+    </section>
+
+    <section class="section" id="mission">
       <h2>Our Mission</h2>
       <p>
         To provide premium, innovative, and stylish nicotine experiences while maintaining a strong commitment to quality,
         satisfaction, and creative expression.
       </p>
+    </section>
 
+    <section class="section" id="vision">
       <h2>Our Vision</h2>
       <p>
         To be the leading name in alternative nicotine culture—celebrated for originality, quality, and a bold voice in a
@@ -242,25 +234,23 @@
 
   <script>
     const fadeBg = document.getElementById("fadeBg");
-    const heroSection = document.getElementById("heroSection");
-    const ourStory = document.getElementById("ourStory");
+    const sections = document.querySelectorAll(".section");
 
     window.addEventListener("scroll", () => {
       const scrollY = window.scrollY;
-      const triggerPoint = window.innerHeight / 2;
+      const windowHeight = window.innerHeight;
 
-      // Fade logic
-      if (scrollY > triggerPoint) {
-        heroSection.classList.remove("active");
-        ourStory.classList.add("active");
-      } else {
-        heroSection.classList.add("active");
-        ourStory.classList.remove("active");
-      }
+      // Toggle background
+      fadeBg.classList.toggle("active", scrollY > windowHeight * 0.7);
 
-      // Background change logic
-      const scrollTrigger = window.innerHeight * 0.7;
-      fadeBg.classList.toggle("active", scrollY > scrollTrigger);
+      sections.forEach(section => {
+        const rect = section.getBoundingClientRect();
+        if (rect.top < windowHeight * 0.8 && rect.bottom > windowHeight * 0.2) {
+          section.classList.add("active");
+        } else {
+          section.classList.remove("active");
+        }
+      });
     });
   </script>
 </body>
